feat(app-backend-ca): add cors, files to dockerize